--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,2 @@
+[.github/workflows/main.yml](https://github.com/thatchapanjaihan-beep/thatchapanjaihan/actions/workflows/main.yml/badge.svg?branch=codespace-refactored-invention-g476gpjgxr9w3wvvw)](https://github.com/thatchapanjaihan-beep/thatchapanjaihan/actions/workflows/main.yml)
 
